# sw

./: AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  deny.toml  sw-runbook.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-hygiene.yml
docs/decisions/: ADR-0001-programming-language-rust.md  ADR-0001-specification-driven-development-with-ai.md  ADR-0002-programming-language-rust.md  README.md
docs/guides/: README.md  check.md  convert.md  entities.md  example.md  explain.md  format.md  help.md  import.md  init.md  run.md  validate.md  version.md
docs/release/: first-release-supported-features.md
docs/spec/: 00-product-vision.md  Product-Vision.md  README.md  SPEC-001-help-and-discovery.md  SPEC-002-validate-runbook.md  SPEC-003-run-runbook-to-markdown.md  SPEC-004-init-runbook-sample.md  SPEC-005-check-prerequisites.md  SPEC-006-import-readme-to-runbook.md  SPEC-007-release-distribution.md  SPEC-008-example-snippets.md  SPEC-009-explain-feature-contract.md  SPEC-010-format-runbook-json.md  SPEC-011-display-file-transformations.md  SPEC-012-convert-runbook-formats.md
docs/tasks/: README.md  TASK-001-implement-help-placeholder.md  TASK-002-implement-validate-command.md  TASK-003-implement-run-command.md  TASK-004-support-command-exit-assertions.md  TASK-006-support-command-timeouts.md  (+55 more)
src/: cli.rs  main.rs
tests/: cli_check.rs  cli_convert.rs  cli_example.rs  cli_explain.rs  cli_format.rs  cli_help.rs  cli_import.rs  cli_init.rs  cli_run.rs  cli_validate.rs
tools/: cleanup-merged-branch.sh  render-release-readme.sh  verify.sh
(+352 files in other folders)
