[package]
name = "sociable-weaver"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "MIT"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_norway = "0.9"
regex = "1.12"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sha2 = "0.11"

[[bin]]
name = "sw"
path = "src/main.rs"
